cabal-version:  2.4
name:           pgrest
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/pgrest#readme>
homepage:       https://github.com/githubuser/pgrest#readme
bug-reports:    https://github.com/githubuser/pgrest/issues
author:         Hoang Phan
maintainer:     example@example.com
copyright:      2020 hoangpq
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/pgrest

library
  build-depends:       
      base >= 4.6 && < 5
      , stm >= 2.5.0.0
      , async == 2.2.3
      , mtl == 2.2.2
      , transformers
      , HDBC, HDBC-postgresql
      , warp, wai
      , http-types, scientific, time
      , HTTP, convertible
      , bytestring, aeson, network
      , text, optparse-applicative
      , unordered-containers
      , containers
      , regex-base
      , http-media, regex-tdfa
      , Ranged-sets
      , transformers
  exposed-modules:     
      Dbapi
      , PgStructure
      , PgQuery
      , RangeQuery
  other-extensions:    
      OverloadedStrings
  hs-source-dirs:      
      src
  default-language: Haskell2010

executable pgrest-exe
  main-is: Main.hs
  other-modules:
      Types
    , PgStructure
    , PgQuery
    , RangeQuery
  hs-source-dirs:
      src
  -- ghc-options: -Wall
  build-depends:
      HDBC
    , HDBC-postgresql
    , aeson >= 1.3 && < 1.5.6.0
    , base >= 4.7 && < 5
    , stm >= 2.5.0.0
    , async == 2.2.3
    , mtl == 2.2.2
    , transformers
    , bytestring
    , http-types
    , network
    , network-uri
    , optparse-applicative
    , convertible, HTTP
    , containers
    , text
    , unordered-containers
    , wai
    , http-types
    , scientific
    , time
    , warp
    , http-media
    , regex-base
    , regex-tdfa
    , Ranged-sets
    , regex-posix
    , zlib
  default-language: Haskell2010

test-suite pgrest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       
      HDBC
    , HDBC-postgresql
    , aeson >=1.3 && <1.5.6.0
    , base >=4.7 && <5
    , stm >= 2.5.0.0
    , mtl == 2.2.2
    , transformers
    , bytestring
    , hspec
    , http-types
    , network
    , network-uri
    , optparse-applicative
    , convertible, HTTP
    , containers
    , text
    , unordered-containers
    , wai
    , wai-extra
    , hspec-wai
    , hspec-wai-json
    , http-types
    , scientific
    , time
    , warp
    , http-media
    , regex-base
    , regex-tdfa
    , Ranged-sets
    , regex-posix
    , zlib
  other-modules: Dbapi, Spec, SpecHelper
  default-language: Haskell2010