cabal-version:  2.4
name:           pgrest
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/pgrest#readme>
homepage:       https://github.com/githubuser/pgrest#readme
bug-reports:    https://github.com/githubuser/pgrest/issues
author:         Hoang Phan
maintainer:     example@example.com
copyright:      2020 hoangpq
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/pgrest

executable pgrest-exe
  main-is: Main.hs
  other-modules:
        Dbapi
      , Types
      , PgStructure
      , PgQuery
      , RangeQuery
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      HDBC
    , HDBC-postgresql
    , aeson >= 1.3 && < 1.5.6.0
    , base >= 4.7 && < 5
    , stm >= 2.5.0.0
    , async == 2.2.3
    , mtl == 2.2.2
    , transformers
    , warp-tls
    , bytestring
    , http-types
    , network
    , network-uri
    , optparse-applicative
    , convertible, HTTP
    , case-insensitive
    , containers
    , text
    , unordered-containers
    , wai
    , wai-extra
    , http-types
    , scientific
    , time
    , warp
    , http-media
    , regex-base
    , string-conversions
    , regex-tdfa
    , Ranged-sets
    , regex-posix
    , zlib
    , utf8-string
  default-language: Haskell2010

test-suite pgrest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       
      HDBC
    , HDBC-postgresql
    , aeson >=1.3 && <1.5.6.0
    , base >=4.7 && <5
    , stm >= 2.5.0.0
    , mtl == 2.2.2
    , transformers
    , warp-tls
    , bytestring
    , hspec
    , http-types
    , network
    , network-uri
    , optparse-applicative
    , convertible, HTTP
    , case-insensitive
    , containers
    , text
    , unordered-containers
    , wai
    , wai-extra
    , hspec-wai
    , hspec-wai-json
    , http-types
    , scientific
    , time
    , warp
    , http-media
    , regex-base
    , string-conversions
    , regex-tdfa
    , Ranged-sets
    , regex-posix
    , zlib
    , utf8-string
  other-modules: 
        Dbapi, 
        Spec, 
        SpecHelper
  default-language: Haskell2010