cabal-version:  2.4
name:           pgrest
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/pgrest#readme>
homepage:       https://github.com/githubuser/pgrest#readme
bug-reports:    https://github.com/githubuser/pgrest/issues
author:         Hoang Phan
maintainer:     example@example.com
copyright:      2020 hoangpq
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/pgrest

executable pgrest-exe
  main-is: Main.hs
  other-modules:
      Dbapi
    , PgStructure
    , PgQuery
    , RangeQuery
    , Middleware
    , Paths_pgrest
  hs-source-dirs:
      src
  ghc-options: -Wall -W -Werror -O2
  build-depends:
    base >= 4.7 && <5 
    , hasql                     >= 1.4 && < 1.5
    , hasql-dynamic-statements  == 0.3.1
    , hasql-notifications       >= 0.1 && < 0.3
    , hasql-pool                >= 0.5 && < 0.6
    , hasql-transaction         >= 1.0.1 && < 1.1
    , aeson >= 1.3 && < 1.5.6.0
    , stm >= 2.5.0.0
    , async == 2.2.3
    , mtl == 2.2.2
    , transformers
    , warp-tls
    , split
    , bytestring
    , http-types
    , network
    , network-uri
    , optparse-applicative
    , stringsearch
    , convertible, HTTP
    , case-insensitive
    , containers
    , text
    , unordered-containers
    , wai
    , wai-extra
    , http-types
    , scientific
    , time
    , warp
    , http-media
    , regex-base
    , string-conversions
    , regex-tdfa
    , Ranged-sets
    , regex-posix
    , zlib
    , utf8-string
    , resource-pool
    , blaze-builder
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  other-extensions: QuasiQuotes

test-suite pgrest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       
    base >= 4.3 && <4.10
    , hasql             >= 1.4 && < 1.5
    , hasql-pool        >= 0.5 && < 0.6
    , hasql-transaction >= 1.0.1 && < 1.1
    , aeson >=1.3 && <1.5.6.0 
    , stm >= 2.5.0.0
    , mtl == 2.2.2
    , transformers
    , warp-tls
    , split
    , bytestring
    , hspec
    , http-types
    , network
    , network-uri
    , optparse-applicative
    , convertible, HTTP
    , case-insensitive
    , containers
    , text
    , unordered-containers
    , wai
    , wai-extra
    , hspec-wai >= 0.5.0
    , hspec-wai-json
    , http-types
    , scientific
    , time
    , warp
    , http-media
    , regex-base
    , string-conversions
    , stringsearch
    , regex-tdfa
    , Ranged-sets
    , regex-posix
    , zlib
    , utf8-string
    , resource-pool
    , blaze-builder
  other-modules: 
        Dbapi, 
        Spec, 
        SpecHelper
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  other-extensions: QuasiQuotes
