cabal-version:  2.4
name:           pgrest
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/pgrest#readme>
homepage:       https://github.com/githubuser/pgrest#readme
bug-reports:    https://github.com/githubuser/pgrest/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/pgrest

executable pgrest-exe
  main-is: Main.hs
  other-modules:
      Types
    , PgStructure
    , PgQuery
    , RangeQuery
  hs-source-dirs:
      src
  -- ghc-options: -Wall
  build-depends:
      HDBC
    , HDBC-postgresql
    , aeson >=1.3 && <1.5.6.0
    , base >=4.7 && <5
    , bytestring
    , heroku
    , hspec
    , http-types
    , network
    , network-uri
    , optparse-applicative
    , text
    , unordered-containers
    , wai
    , http-types
    , scientific
    , time
    , warp
    , http-media
    , regex-base
    , regex-tdfa
    , Ranged-sets
    , regex-posix
    , zlib
  default-language: Haskell2010

test-suite pgrest-test
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  Hs-Source-Dirs:      src, test
  Ghc-Options:         -Wall
  Main-Is:             Spec.hs
  Build-Depends:       base, HDBC,
                       HDBC-postgresql
  default-language: Haskell2010